fixed bug where main content was too large on mobile by changing width to max width

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -1,10 +1,11 @@
 // Article
 
 main {
-  width: 750px;
+  padding-top: 500px;
+  max-width: 750px;
   margin: auto;
 }
 
 main p {
-  padding-bottom: 500px;;
+  padding-bottom: 500px;
 }
